[package]
name = "remote-glovebox"
description = "Server-side variant of glovebox"
keywords = ["javadoc", "web-server"]
categories = []
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/EngineHub/remote-glovebox"
edition = "2018"

[dependencies]
structopt = "0.3.20"
log = "0.4.11"
simplelog = "0.8.0"
anyhow = "1.0.32"
thiserror = "1.0.21"
actix = "0.10.0"
actix-web = "3.1.0"
http = "0.2.1"
serde = { version = "1.0.117", features = ["derive"] }
once_cell = "1.4.1"
attohttpc = "0.16.0"
zip = "0.5.8"
lru = "0.6.0"
# Must be outdated, to match actix-web's bytes
bytes = "0.5.6"

[profile.release]
opt-level = "z"
lto = true
